--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="per">
-                    <img src="PEREPELITSA-UIR.jpg" alt="">
+                    <img src="img/PEREPELITSA-UIR.jpg" alt="">
                 </div>
                 <div class="desr">
                     <h3>Александр Перепелица</h3>
@@ -26,27 +26,27 @@
             </div>
             <div class="swiper-slide">
                 <div class="plusch">
-                    <img src="PLYUSHCH-O.B.-_UIR.jpg" alt="">
+                    <img src="img/PLYUSHCH-O.B.-_UIR.jpg" alt="">
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="labock">
-                    <img src="LABOTSKIY-_UIR.jpg" alt="">
+                    <img src="img/LABOTSKIY-_UIR.jpg" alt="">
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="shastic">
-                    <img src="SHASTITKO-A.V.-_UIR.jpg" alt="">
+                    <img src="img/SHASTITKO-A.V.-_UIR.jpg" alt="">
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="sorokoviikk">
-                    <img src="SOROKOVIK-_SOTS.GUM.jpg" alt="">
+                    <img src="img/SOROKOVIK-_SOTS.GUM.jpg" alt="">
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="urcha">
-                    <img src="YURCHA-I.A._UIR.jpg" alt="">
+                    <img src="img/YURCHA-I.A._UIR.jpg" alt="">
                 </div>
             </div>
             <div class="swiper-slide"></div>
