--- a/index.html
+++ b/index.html
@@ -15,48 +15,82 @@
 <body>
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            <div class="swiper-slide">
+            <div class="swiper-slide perepel">
                 <div class="per">
                     <img src="img/PEREPELITSA-UIR.jpg" alt="">
+                    <img class="per-sims" src="img/perepel-simsgrad.png" alt="">
                 </div>
                 <div class="desr">
                     <h3>Александр Перепелица</h3>
                     <p>"Поместите фотки меня и белодеда на ментальную картку"</p>
                 </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide pluxsch">
                 <div class="plusch">
                     <img src="img/PLYUSHCH-O.B.-_UIR.jpg" alt="">
+                    <img class="plux" src="img/plux.png" alt="">
                 </div>
             </div>
-            <div class="swiper-slide">
-                <div class="labock">
+            <div class="swiper-slide lab">
+                <div class="labocki__wrapper">
                     <img src="img/LABOTSKIY-_UIR.jpg" alt="">
+                    <img class="labocki" src="img/labocki.png" alt="">
                 </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide shastic-slide">
                 <div class="shastic">
                     <img src="img/SHASTITKO-A.V.-_UIR.jpg" alt="">
+                    <img class="shastic-sims" src="img/shastic-sims.png" alt="">
                 </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide pavlova__wrapper">
+                <div class="pavl">
+                    <img src="img/PAVLOVA-M.I._UIR.jpg" alt="">
+                    <img class="pavlova-sims" src="img/pavlova-sims.png" alt="">
+                </div>
+            </div>
+            <div class="swiper-slide sorok">
                 <div class="sorokoviikk">
                     <img src="img/SOROKOVIK-_SOTS.GUM.jpg" alt="">
+                    <img class="sorok-sims" src="img/sorok-sims.png" alt="">
                 </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide urcha__wrapper">
                 <div class="urcha">
                     <img src="img/YURCHA-I.A._UIR.jpg" alt="">
+                    <img class="yurcha-sims" src="img/yurcha-sims.png" alt="">
                 </div>
             </div>
-            <div class="swiper-slide"></div>
-            <div class="swiper-slide"> </div>
-            <div class="swiper-slide"> </div>
-            <div class="swiper-slide"> </div>
+            <div class="swiper-slide sherb__wrapper">
+                <div class="sherb">
+                    <img src="img/SHCHERBOVICH-N.I._UIR.jpg" alt="">
+                    <img class="sherb-sims" src="img/scherb-sims.png" alt="">
+                </div>
+            </div>
+            <div class="swiper-slide gvaeva__wrapper">
+                <div class="gv">
+                    <img src="img/GVAEVA-I.V._UIR.jpg" alt="">
+                    <img class="gvaeva-sims" src="img/gvaeva-sims.png" alt="">
+                </div>
+            </div>
+            <div class="swiper-slide sharkova__wrapper">
+                <div class="sh">
+                    <img src="img/SHARKOVA-O.E._-KAF-EK-RAZV-I-MENDZH.jpg" alt="">
+                    <img class="sharkova-sims" src="img/sharkova-sims.png" alt="">
+                </div>
+            </div>
+            <div class="swiper-slide zhurko__wrapper">
+                <div class="zh">
+                    <img src="img/ZHurko-FIZ_RA.jpg" alt="">
+                    <img class="zhurko-sims" src="img/zhurko-sims.png" alt="">
+                </div>
+            </div>
+           
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
     </div>
+    <script src="js/jquery-3.5.0.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/main.js"></script>
   
